--- a/template/api/requests/BookingRequest.java.liquid
+++ b/template/api/requests/BookingRequest.java.liquid
@@ -1,17 +1,26 @@
 package {{ groupId }}.api.requests;
 
-import static io.github.boykaframework.builders.ApiRequest.createRequest;
 import static {{ groupId }}.api.data.AuthRequestData.getTokenData;
+import static io.github.boykaframework.actions.api.ApiActions.withRequest;
+import static io.github.boykaframework.builders.ApiRequest.createRequest;
+import static io.github.boykaframework.enums.RequestMethod.DELETE;
+import static io.github.boykaframework.enums.RequestMethod.GET;
+import static io.github.boykaframework.enums.RequestMethod.PATCH;
+import static io.github.boykaframework.enums.RequestMethod.POST;
+import static io.github.boykaframework.enums.RequestMethod.PUT;
 import static java.text.MessageFormat.format;
 
+import {{ groupId }}.api.data.AuthRequestData;
+import {{ groupId }}.api.pojo.BookingData;
 import io.github.boykaframework.actions.api.ApiActions;
 import io.github.boykaframework.builders.ApiRequest;
 import io.github.boykaframework.enums.RequestMethod;
-import {{ groupId }}.api.pojo.BookingData;
+import lombok.experimental.UtilityClass;
 
+@UtilityClass
 public final class BookingRequest {
     public static ApiRequest createBooking (final BookingData requestBody) {
-        return createRequest ().method (RequestMethod.POST)
+        return createRequest ().method (POST)
             .header ("Accept", "application/json")
             .path ("/booking")
             .bodyObject (requestBody)
@@ -19,7 +28,7 @@ public final class BookingRequest {
     }
 
     public static ApiRequest deleteBooking (final String id) {
-        return createRequest ().method (RequestMethod.DELETE)
+        return createRequest ().method (DELETE)
             .header ("Content-Type", "application/json")
             .header ("Cookie", format ("token={0}", generateToken ()))
             .path ("/booking/${id}")
@@ -28,7 +37,7 @@ public final class BookingRequest {
     }
 
     public static ApiRequest getBooking (final String id) {
-        return createRequest ().method (RequestMethod.GET)
+        return createRequest ().method (GET)
             .header ("Accept", "application/json")
             .path ("/booking/${id}")
             .pathParam ("id", id)
@@ -36,7 +45,7 @@ public final class BookingRequest {
     }
 
     public static ApiRequest updateBooking (final String id, final BookingData requestBody) {
-        return createRequest ().method (RequestMethod.PUT)
+        return createRequest ().method (PUT)
             .header ("Accept", "application/json")
             .header ("Cookie", format ("token={0}", generateToken ()))
             .path ("/booking/${id}")
@@ -46,7 +55,7 @@ public final class BookingRequest {
     }
 
     public static ApiRequest updatePartialBooking (final String id, final BookingData requestBody) {
-        return createRequest ().method (RequestMethod.PATCH)
+        return createRequest ().method (PATCH)
             .header ("Accept", "application/json")
             .header ("Cookie", format ("token={0}", generateToken ()))
             .path ("/booking/${id}")
@@ -57,17 +66,13 @@ public final class BookingRequest {
 
     private static String generateToken () {
         final var generateTokenRequest = createRequest ().header ("Accept", "application/json")
-            .method (RequestMethod.POST)
+            .method (POST)
             .path ("/auth")
             .bodyObject (getTokenData ())
             .create ();
 
-        final var response = ApiActions.withRequest (generateTokenRequest)
+        final var response = withRequest (generateTokenRequest)
             .execute ();
         return response.getResponseData ("token");
-    }
-
-    private BookingRequest () {
-        // Utility Class.
     }
 }
